--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,70 @@
 /* write your override styles here */
+#wall .tag-1 {
+    display: none;
+}
+
+/* #wall #tag-2 {
+    display: none;
+} */
+
+/* #wall .tag-2 {
+    display: none;
+} */
+
+/* #div #wall #tag-2 {
+    display: none;
+} */
+
+div#wall #tag-2 {
+    display: none;
+}
+
+/* div#wall #tag-3.slick {
+    display: none;
+} */
+
+
+/* div#wall #tag-3.slick {
+    display: none;
+} */
+
+/* div#wall #tag-3.slick-wicked {
+    display: none
+} */
+
+/* div#wall #tag-3 {
+    display: none
+} */
+
+/* div#wall .tag-3 {
+    display: none
+} */
+
+/* div#wall .tag-3#slick {
+    display: none
+} */
+
+/* div#wall .tag-3#slick {
+    display: none
+} */
+
+/* div#wall div#tag-3#slick-wicked {
+    display: none
+} */
+
+div#wall div#tag-3.slick.wicked {
+    display: none
+}
+
+
+div#wall #tag-4 {
+    display: none;
+}
+
+/* div#wall .parent #tag-5.slick {
+    display: none;
+} */
+
+div#wall div.parent #tag-5.slick {
+    display: none;
+}
